Add left and right sidebar ads to all guide pages

--- a/guides/gluten-free-austin-guide.html
+++ b/guides/gluten-free-austin-guide.html
@@ -134,6 +134,15 @@
                 </ul>
             </section>
 
+            <!-- Ezoic Sidebar Ads (Left & Right) -->
+            <div id="ezoic-pub-ad-placeholder-109" class="ezoic-ad" style="float: left; margin: 0 1.5rem 1.5rem 0; max-width: 160px;"></div>
+            <div id="ezoic-pub-ad-placeholder-106" class="ezoic-ad" style="float: right; margin: 0 0 1.5rem 1.5rem; max-width: 160px;"></div>
+            <script>
+                ezstandalone.cmd.push(function() {
+                    ezstandalone.showAds(109, 106);
+                });
+            </script>
+
             <section id="top-picks">
                 <h2>Top Gluten-Free Picks by Neighborhood</h2>
                 <p>Austin’s gluten-free dining scene stretches well beyond downtown. Use these highlights to plan meals near where you’re staying:</p>
