--- a/guides/gluten-free-pizza-austin.html
+++ b/guides/gluten-free-pizza-austin.html
@@ -352,6 +352,15 @@
                 </ul>
             </div>
 
+            <!-- Ezoic Sidebar Ads (Left & Right) -->
+            <div id="ezoic-pub-ad-placeholder-109" class="ezoic-ad" style="float: left; margin: 0 1.5rem 1.5rem 0; max-width: 160px;"></div>
+            <div id="ezoic-pub-ad-placeholder-106" class="ezoic-ad" style="float: right; margin: 0 0 1.5rem 1.5rem; max-width: 160px;"></div>
+            <script>
+                ezstandalone.cmd.push(function() {
+                    ezstandalone.showAds(109, 106);
+                });
+            </script>
+
             <p>Finding great gluten-free pizza in Austin used to be a challenge. Today, the city offers more GF pizza options than ever before—from dedicated gluten-free kitchens to traditional pizzerias that have added quality GF crusts to their menus. Whether you have celiac disease, gluten sensitivity, or simply prefer to avoid gluten, this guide will help you find the perfect slice.</p>
 
             <p>We've personally researched each restaurant's preparation methods, cross-contamination protocols, and customer feedback from the Austin celiac community. Each listing includes a safety rating to help you make informed decisions based on your sensitivity level.</p>
