--- a/guides/gluten-free-faq.html
+++ b/guides/gluten-free-faq.html
@@ -213,11 +213,12 @@
                     </ul>
                 </div>
 
-                <!-- Ezoic Sidebar Ad -->
-                <div id="ezoic-pub-ad-placeholder-106" class="ezoic-ad" style="float: right; margin: 0 0 1.5rem 1.5rem; max-width: 300px;"></div>
+                <!-- Ezoic Sidebar Ads (Left & Right) -->
+                <div id="ezoic-pub-ad-placeholder-109" class="ezoic-ad" style="float: left; margin: 0 1.5rem 1.5rem 0; max-width: 160px;"></div>
+                <div id="ezoic-pub-ad-placeholder-106" class="ezoic-ad" style="float: right; margin: 0 0 1.5rem 1.5rem; max-width: 160px;"></div>
                 <script>
                     ezstandalone.cmd.push(function() {
-                        ezstandalone.showAds(106);
+                        ezstandalone.showAds(109, 106);
                     });
                 </script>
 
