--- a/restaurants/uchi.html
+++ b/restaurants/uchi.html
@@ -260,6 +260,16 @@
                 </div>
             </div>
         </section>
+
+            <!-- Ezoic Bottom Ad -->
+            <div class="container" style="margin: 2rem auto; max-width: 728px;">
+                <div id="ezoic-pub-ad-placeholder-114" class="ezoic-ad"></div>
+                <script>
+                    ezstandalone.cmd.push(function() {
+                        ezstandalone.showAds(114);
+                    });
+                </script>
+            </div>
     </main>
 
     <footer class="footer">
