Add New Year 2026 blog post, Date Night Guide, and January 2026 updates to key restaurants

--- a/restaurants/atx-cocina.html
+++ b/restaurants/atx-cocina.html
@@ -154,6 +154,11 @@
             <div class="container">
                 <div class="detail-grid">
                     <div class="main-content">
+                        <div class="section" style="background: linear-gradient(135deg, #e8f5e9 0%, #fff8e1 100%); padding: 1.25rem; border-radius: 8px; margin-bottom: 2rem;">
+                            <h3 style="color: #2e7d32; margin-top: 0;"><i class="fas fa-star"></i> January 2026 Update</h3>
+                            <p style="margin-bottom: 0;">ATX Cocina continues to set the standard for gluten-free fine dining in Austin. Recent visitors report the winter menu features exceptional seasonal dishes, and the bar program has expanded with new organic agave cocktails. <strong>Reservations are highly recommended</strong>—the restaurant has been busier than ever as word spreads about their commitment to celiac-safe dining. The Sunday brunch remains one of Austin's best-kept secrets for GF diners.</p>
+                        </div>
+
                         <div class="section">
                             <h2>About ATX Cocina</h2>
                             <p class="description">ATX Cocina is a culinary revelation for anyone following a gluten-free lifestyle. This isn't just a restaurant with gluten-free options—it's a 100% gluten-free AND 100% seed oil free establishment that experiments with the boundaries of Mexican cuisine, taking traditional dishes and elevating them with modern approaches and techniques while maintaining complete celiac safety.</p>
