--- a/restaurants/pinthouse-pizza---burnet-road.html
+++ b/restaurants/pinthouse-pizza---burnet-road.html
@@ -150,6 +150,11 @@
             <div class="container">
                 <div class="detail-grid">
                     <div class="main-content">
+                        <div class="section" style="background: linear-gradient(135deg, #e8f5e9 0%, #fff8e1 100%); padding: 1.25rem; border-radius: 8px; margin-bottom: 2rem;">
+                            <h3 style="color: #2e7d32; margin-top: 0;"><i class="fas fa-star"></i> January 2026 Update</h3>
+                            <p style="margin-bottom: 0;">Pinthouse continues to impress gluten-free diners with their ancient grain crust, now available at all three Austin locations. Staff training on GF protocols has been enhanced, and many regulars report even better cross-contamination awareness than before. <strong>New in 2026:</strong> They've added more GF-friendly appetizer options beyond salads. The Bee Cave pizza on GF crust remains the must-try dish!</p>
+                        </div>
+
                         <div class="section">
                             <h2>About Pinthouse Pizza</h2>
                             <p>Pinthouse Pizza has become an Austin institution since opening, combining two of life's greatest pleasures: exceptional craft beer and creative, delicious pizza. The Burnet Road location was the original Pinthouse—where it all began—and it continues to draw crowds of beer enthusiasts and pizza lovers alike.</p>
