--- a/restaurants/uchi.html
+++ b/restaurants/uchi.html
@@ -150,6 +150,11 @@
             <div class="container">
                 <div class="detail-grid">
                     <div class="main-content">
+                        <div class="section" style="background: linear-gradient(135deg, #e8f5e9 0%, #fff8e1 100%); padding: 1.25rem; border-radius: 8px; margin-bottom: 2rem;">
+                            <h3 style="color: #2e7d32; margin-top: 0;"><i class="fas fa-star"></i> January 2026 Update</h3>
+                            <p style="margin-bottom: 0;">Uchi remains Austin's premier destination for gluten-free Japanese cuisine. The kitchen continues to excel at accommodating celiac diners—just mention your needs when booking or to your server. <strong>Pro tip for 2026:</strong> Ask about the omakase experience with GF modifications. The chefs are incredibly skilled at creating a memorable multi-course meal that's entirely gluten-free. Reservations essential!</p>
+                        </div>
+
                         <div class="section">
                             <h2>About Uchi</h2>
                             <p class="description">Uchi is Austin's crown jewel of Japanese cuisine—a James Beard Award-winning restaurant that has earned national acclaim for its innovative approach to sushi and Japanese cooking. What makes Uchi remarkable for the gluten-free community is the staff's <strong>exceptional knowledge and willingness to accommodate</strong> celiac diners without compromising the artistry of their dishes.</p>
