--- a/restaurants/bird-bird-biscuit.html
+++ b/restaurants/bird-bird-biscuit.html
@@ -150,6 +150,11 @@
             <div class="container">
                 <div class="detail-grid">
                     <div class="main-content">
+                        <div class="section" style="background: linear-gradient(135deg, #e8f5e9 0%, #fff8e1 100%); padding: 1.25rem; border-radius: 8px; margin-bottom: 2rem;">
+                            <h3 style="color: #2e7d32; margin-top: 0;"><i class="fas fa-star"></i> January 2026 Update</h3>
+                            <p style="margin-bottom: 0;">Bird Bird's gluten-free biscuit remains one of Austin's best GF breakfast options. <strong>2026 tip:</strong> The Manor Road location now offers expanded dinner service Thursday-Saturday, giving GF diners more opportunities to enjoy their famous sandwiches. Online ordering remains the fastest way to get your fix—order ahead and skip the weekend brunch rush!</p>
+                        </div>
+
                         <div class="section">
                             <h2>About Bird Bird Biscuit</h2>
                             <p class="description">Bird Bird Biscuit has become an Austin institution, earning devoted followers with their creative biscuit sandwiches, genuine commitment to hospitality, and sheer deliciousness. With three locations across Austin, they've built a community of biscuit lovers who line up for their signature creations. Their motto? "Let the biscuit bring the joy!"</p>
