Add internal links to new Date Night and New Year 2026 pages across site

--- a/guides/gluten-free-austin-guide.html
+++ b/guides/gluten-free-austin-guide.html
@@ -161,6 +161,13 @@
                     <li><a href="#resources">Local Resources &amp; Support Groups</a></li>
                     <li><a href="gluten-free-faq.html"><strong>FAQ: Common Questions About GF Dining</strong></a></li>
                 </ul>
+                <div style="margin-top: 1.5rem; padding-top: 1rem; border-top: 1px solid #ddd;">
+                    <p style="margin: 0; font-weight: 600; color: #2d5016;">🆕 New Guides:</p>
+                    <ul style="margin: 0.5rem 0 0 1.5rem;">
+                        <li><a href="gluten-free-date-night-austin.html">GF Date Night Guide</a> — 12 romantic restaurants</li>
+                        <li><a href="../blog/new-year-2026-gluten-free-austin.html">New Year 2026 Update</a> — What's trending</li>
+                    </ul>
+                </div>
             </section>
 
             <!-- Ezoic Sidebar Ads (Fixed to Screen Edges) -->
