--- a/guides/gluten-free-breakfast-austin.html
+++ b/guides/gluten-free-breakfast-austin.html
@@ -622,10 +622,12 @@
             
             <p>Explore more GF options in Austin:</p>
             <ul>
+                <li><a href="gluten-free-date-night-austin.html">🆕 GF Date Night Guide</a> — 12 romantic restaurants</li>
+                <li><a href="../blog/new-year-2026-gluten-free-austin.html">🆕 New Year 2026 Update</a> — What's new & trending</li>
                 <li><a href="gluten-free-pizza-austin.html">Gluten-Free Pizza in Austin</a></li>
                 <li><a href="gluten-free-austin-guide.html">Complete Gluten-Free Austin Guide</a></li>
                 <li><a href="gluten-free-faq.html">Gluten-Free Dining FAQ</a></li>
-                <li><a href="../#restaurants">All 35+ GF Restaurants in Austin</a></li>
+                <li><a href="../#restaurants">All 40+ GF Restaurants in Austin</a></li>
             </ul>
 
             
