--- a/guides/gluten-free-faq.html
+++ b/guides/gluten-free-faq.html
@@ -537,6 +537,7 @@
                 <div class="highlight-box">
                     <h4><i class="fas fa-utensils"></i> Ready to Explore?</h4>
                     <p>Now that you have the knowledge, it's time to eat! Browse our <a href="../#restaurants">full restaurant directory</a> or check out the <a href="gluten-free-austin-guide.html">Ultimate Gluten-Free Austin Guide</a> for curated itineraries and neighborhood recommendations.</p>
+                    <p style="margin-top: 1rem;"><strong>🆕 New Guides:</strong> <a href="gluten-free-date-night-austin.html">GF Date Night Guide</a> | <a href="../blog/new-year-2026-gluten-free-austin.html">New Year 2026 Update</a></p>
                 </div>
 
             </article>
