--- a/index.html
+++ b/index.html
@@ -537,11 +537,12 @@
                 <div class="footer-section">
                     <h4>GF Guides</h4>
                     <ul>
+                        <li><a href="guides/gluten-free-date-night-austin.html">🆕 GF Date Night Guide</a></li>
+                        <li><a href="blog/new-year-2026-gluten-free-austin.html">🆕 New Year 2026 Update</a></li>
                         <li><a href="guides/gluten-free-pizza-austin.html">GF Pizza in Austin</a></li>
                         <li><a href="guides/gluten-free-breakfast-austin.html">GF Breakfast & Brunch</a></li>
                         <li><a href="guides/gluten-free-austin-guide.html">Complete Austin Guide</a></li>
                         <li><a href="guides/gluten-free-faq.html">FAQ</a></li>
-                        <li><a href="guides/gluten-free-austin-guide.html#itineraries">Weekend Itineraries</a></li>
                     </ul>
                 </div>
             </div>
