Add Ezoic ad placeholder (114) to Date Night Guide and New Year 2026 blog post

--- a/guides/gluten-free-date-night-austin.html
+++ b/guides/gluten-free-date-night-austin.html
@@ -358,6 +358,14 @@
                 <a href="../#restaurants" style="display: inline-block; background: white; color: #2d5016; padding: 0.75rem 2rem; border-radius: 25px; text-decoration: none; font-weight: 600; margin-top: 1rem;">View All Restaurants →</a>
             </div>
 
+            <!-- Ezoic Ad Placeholder 114 -->
+            <div id="ezoic-pub-ad-placeholder-114" class="ezoic-ad" style="margin: 2rem 0;"></div>
+            <script>
+                ezstandalone.cmd.push(function() {
+                    ezstandalone.showAds(114);
+                });
+            </script>
+
             <hr style="margin: 3rem 0; border: none; border-top: 1px solid #ddd;">
 
             <h3>Related Guides</h3>
